<resources>
    <string name="app_name">RealMeApp</string>
    <string name="app_description">Vuforia Sample Applications</string>
    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>
    <string name="button_OK">OK</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    <string name="menu_back">Vuforia Samples</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="fa_low_vision">&#xf2a8;</string>
    <string name="accesorize">ACCESORIZE!</string>
    <string name="price_9_98_22_98">Price: $9.98 - $22.98</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_adn">&#xf170;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_ambulance">&#xf0f9;</string>
    <string name="fa_anchor">&#xf13d;</string>
    <string name="fa_android">&#xf17b;</string>
    <string name="fa_angellist">&#xf209;</string>
    <string name="fa_angle_double_down">&#xf103;</string>
    <string name="fa_angle_double_left">&#xf100;</string>
    <string name="fa_angle_double_right">&#xf101;</string>
    <string name="fa_angle_double_up">&#xf102;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_apple">&#xf179;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_area_chart">&#xf1fe;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_left">&#xf190;</string>
    <string name="fa_arrow_circle_o_right">&#xf18e;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_at">&#xf1fa;</string>
    <string name="fa_automobile">&#xf1b9;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_bank">&#xf19c;</string>
    <string name="fa_bar_chart">&#xf080;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_beer">&#xf0fc;</string>
    <string name="fa_behance">&#xf1b4;</string>
    <string name="fa_behance_square">&#xf1b5;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_bell_o">&#xf0a2;</string>
    <string name="fa_bell_slash">&#xf1f6;</string>
    <string name="fa_bell_slash_o">&#xf1f7;</string>
    <string name="fa_bicycle">&#xf206;</string>
    <string name="fa_binoculars">&#xf1e5;</string>
    <string name="fa_birthday_cake">&#xf1fd;</string>
    <string name="fa_bitbucket">&#xf171;</string>
    <string name="fa_bitbucket_square">&#xf172;</string>
    <string name="fa_bitcoin">&#xf15a;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_bomb">&#xf1e2;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_btc">&#xf15a;</string>
    <string name="fa_bug">&#xf188;</string>
    <string name="fa_building">&#xf1ad;</string>
    <string name="fa_building_o">&#xf0f7;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bullseye">&#xf140;</string>
    <string name="fa_bus">&#xf207;</string>
    <string name="fa_cab">&#xf1ba;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_left">&#xf0d9;</string>
    <string name="fa_caret_right">&#xf0da;</string>
    <string name="fa_caret_square_o_down">&#xf150;</string>
    <string name="fa_caret_square_o_left">&#xf191;</string>
    <string name="fa_caret_square_o_right">&#xf152;</string>
    <string name="fa_caret_square_o_up">&#xf151;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="fa_cc">&#xf20a;</string>
    <string name="fa_cc_amex">&#xf1f3;</string>
    <string name="fa_cc_discover">&#xf1f2;</string>
    <string name="fa_cc_mastercard">&#xf1f1;</string>
    <string name="fa_cc_paypal">&#xf1f4;</string>
    <string name="fa_cc_stripe">&#xf1f5;</string>
    <string name="fa_cc_visa">&#xf1f0;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_chain">&#xf0c1;</string>
    <string name="fa_chain_broken">&#xf127;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_check_square">&#xf14a;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_chevron_circle_down">&#xf13a;</string>
    <string name="fa_chevron_circle_left">&#xf137;</string>
    <string name="fa_chevron_circle_right">&#xf138;</string>
    <string name="fa_chevron_circle_up">&#xf139;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_share_alt">&#xf1e0;</string>
    <string name="fa_shopping_cart">&#xf07a;</string>
    <string name="fa_thumbs_o_down">&#xf088;</string>
    <string name="fa_thumbs_o_up">&#xf087;</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="accessorize">ACCESSORIZE!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up_with_shirt">Sign Up with shirt</string>
    <string name="temp">TEMP</string>
    <string name="stylify">STYLIFY!</string>
</resources>