<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_temp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/AntiqueWhite">

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/AntiqueWhite">

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/AntiqueWhite" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_shirt_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="12dp"
            android:background="@color/Crimson"
            android:text="@string/sign_up_with_shirt" />

        <ImageView
            android:id="@+id/signup_selfie_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="20dp"
            android:visibility="invisible"
            android:src="@drawable/shirt2"
            android:minWidth="200dp"
            android:minHeight="200dp"

            />

        <LinearLayout
            android:id="@+id/signup_approve"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:visibility="visible"
            >
            <com.realme_demo.realmeapp.fontAwesome.ButtonAwesome
                android:id="@+id/signup_approve_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fa_thumbs_o_down"
                android:background="@color/DarkRed"
                android:textColor="@color/AntiqueWhite"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="24dp"
                />
            <com.realme_demo.realmeapp.fontAwesome.ButtonAwesome
                android:id="@+id/signup_approve_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fa_thumbs_o_up"
                android:background="@color/DarkGreen"
                android:textColor="@color/AntiqueWhite"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="24dp"
                />

        </LinearLayout>




    </LinearLayout>
</LinearLayout>
