<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="4"
                android:src="@drawable/logo_temp" />
            <TextView
                android:id="@+id/account_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@color/AntiqueWhite"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                />
            <com.realme_demo.realmeapp.fontAwesome.ButtonAwesome
                android:id="@+id/account_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:stateListAnimator="@null"
                android:text="@string/fa_bars"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/AntiqueWhite"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/account_user_img"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:minWidth="256dp"
            android:minHeight="256dp"
            android:src="@drawable/shirt2"
            />

        <Button
            android:id="@+id/account_modify"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/OrangeRed"
            android:text="MODIFY!"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/account_stylify"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/ForestGreen"
            android:text="@string/stylify"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/menu_accessorize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/MediumPurple"
            android:text="@string/accessorize"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <LinearLayout
                android:id="@+id/account_views"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <com.realme_demo.realmeapp.fontAwesome.TextAwesome
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/fa_eye"
                    android:textColor="@color/aqua"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="15"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/AntiqueWhite"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/account_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.realme_demo.realmeapp.fontAwesome.TextAwesome
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/fa_camera"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="3"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/AntiqueWhite"
                    android:gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/account_like"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.realme_demo.realmeapp.fontAwesome.TextAwesome
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/fa_heart"
                    android:textColor="@color/Crimson"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="9"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/AntiqueWhite"
                    android:gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/account_shares"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.realme_demo.realmeapp.fontAwesome.TextAwesome
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/fa_share_alt"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="2"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/AntiqueWhite"
                    android:gravity="center"
                    />

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</LinearLayout>
