<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="224dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/shop_item_img"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:src="@drawable/logo_temp"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/shop_item_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="Title"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/shop_item_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="Type"
            />
        <ImageView
            android:id="@+id/shop_item_rating"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/stars4"/>
        <TextView
            android:id="@+id/shop_item_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="20dp"
            android:text="@string/price_9_98_22_98"
            android:textStyle="bold"
            android:textColor="@color/red"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <com.realme_demo.realmeapp.fontAwesome.ButtonAwesome
                android:id="@+id/shop_item_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:stateListAnimator="@null"
                android:textSize="30dp"
                android:textColor="@color/Gray"
                android:text="@string/fa_shopping_cart"/>

            <com.realme_demo.realmeapp.fontAwesome.ButtonAwesome
                android:id="@+id/shop_item_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:stateListAnimator="@null"
                android:textSize="30dp"
                android:textColor="@color/Gray"
                android:text="@string/fa_share_alt"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
